# CppTriangles

./: CMakeLists.txt  README.md  main.cpp
include/: geom.hpp
lib/: geom.cpp
tests/: CMakeLists.txt
tests/unit/: test_comp_ps.cpp  test_comp_pt.cpp  test_comp_ss.cpp  test_comp_st.cpp  test_comp_tt.cpp  test_intsec.cpp  test_scalprod.cpp  test_sqrdist.cpp  test_tr_segm.cpp  test_vectprod.cpp  unit_test.cpp
